k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dcjewelry
  namespace: dcjewelry
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dcjewelry-backend
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dcjewelry-frontend
                port:
                  name: http
